tests/lean/doIssue.lean.expected.out
doIssue.lean:2:2: error: type mismatch
  x
has type
  Nat
but is expected to have type
  EIO IO.Error PUnit
doIssue.lean:10:2: error: type mismatch
  Array.set! xs 0 1
has type
  Array Nat
but is expected to have type
  EIO IO.Error PUnit
doIssue.lean:18:2: error: application type mismatch
  pure (Array.set! xs 0 1)
argument
  Array.set! xs 0 1
has type
  Array Nat
but is expected to have type
  PUnit
